calibre-web/calibre-web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: calibre-web
  name: calibre-web
  namespace: mediaserver
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: calibre-web
    spec:
      containers:
      - image: linuxserver/calibre-web
        name: calibre-web
        ports:
        - containerPort: 8083
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: calibre-web-config
        - mountPath: /books
          name: calibre-web-ebooks
      restartPolicy: Always
      volumes:
      - name: calibre-web-config
        nfs:
          server: 192.168.178.33
          path: "/volume1/openflixr/calibre-web/config"
      - name: calibre-web-ebooks
        nfs:
          server: 192.168.178.33
          path: "/volume1/calibre"
status: {}
