calibre-web/calibre-web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: calibre-web
  namespace: mediaserver
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: books.internal.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: calibre-web
          servicePort: 8083
